# MusicTrainer

./: .gitignore  Analysis.md  AnalysisSummary.md  ArchitecturalImprovements.md  ArchitectureDecisions.md  BuildConfiguration.md  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.new  CTestTestfile.cmake  CompilationErrorAnalysis.md  ConcurrencyAnalysis.md  ConsolidatedTestPlan.md  CrossDomainValidationAnalysis.md  DesignImprovements.md  DevelopmentStatus.md  Documentation.md  DocumentationReorganization.md  Documentation_New.md  DomainIntegrationGuide.md  DomainModel.md  ErrorHandlingGuide.md  ErrorHandlingImplementationGuide.md  ExerciseProgressionAnalysis.md  GUIDevelopmentPlan.md  GuiIntegrationPatterns.md  ImplementationSteps.md  IntegrationAnalysis.md  LockRemovalStrategy.md  MIDIImplementationAnalysis.md  MIDISystem.md  MIDISystemAnalysis.md  MIDITestSpecification.md  Makefile  MusicTheoryIntegrationAnalysis.md  PerformanceAnalysis.md  PluginSystemAnalysis.md  ProfilingInfrastructureAnalysis.md  ProgressionTestSpec.md  README.md  (+31 more)
.qt/: QtDeploySupport.cmake
CrossDomainValidatorTests_autogen/: deps
ErrorHandlingTests_autogen/: deps
ExerciseGenerationTests_autogen/: deps
MidiSystemTests_autogen/: deps
MusicTrainerGUI_autogen/: deps  moc_predefs.h
MusicTrainerLib_autogen/: deps  moc_predefs.h
MusicTrainerV3_autogen/: deps
PerformanceMonitoringTests_autogen/: deps
PluginSystemTests_autogen/: deps
ProgressionSystemTests_autogen/: deps
RepositoryTests_autogen/: deps
StateSynchronizationManagerTests_autogen/: deps
SystemIntegrationTests_autogen/: deps
TestGUI_autogen/: deps  mocs_compilation.cpp
TestSuite_autogen/: deps  moc_predefs.h
ValidationPipelineTests_autogen/: deps
build-cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  RtMidiConfigUninstall.cmake  cmake_install.cmake
build-test/: CMakeCache.txt  RtMidiConfigUninstall.cmake
design/: CrossDomainValidation.md  StateSynchronization.md
docs/: TestHangingResolution.md
lib/: libgmock.so.1.13.0  libgmock_main.so.1.13.0  libgtest.so.1.13.0  libgtest_main.so.1.13.0
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
patches/: rtmidi_fix.patch
src/: CMakeLists.txt  main.cpp
src/adapters/: CachingScoreRepository.cpp  EventSourcedRepository.cpp  EventSourcedRepository.cpp.new  InMemoryExerciseRepository.cpp  InMemoryScoreRepository.cpp  MockMidiAdapter.cpp  RtMidiAdapter.cpp  TemplateBasedExerciseGenerator.cpp  TemplateBasedExerciseGenerator.cpp.bak  TemplateBasedExerciseGenerator.cpp.new
src/commands/: AddNoteCommand.cpp  AddNoteCommand.h  CommandHistory.cpp  CommandHistory.h  DeleteNoteCommand.cpp  DeleteNoteCommand.h  ICommand.h  MoveNotesCommand.cpp  MoveNotesCommand.h  ResizeNoteCommand.cpp  ResizeNoteCommand.h
src/domain/: Interval.h  KeySignature.h  Note.h  Pitch.h  Position.h  Score.h  TimeSignature.h
src/domain/analysis/: VoiceAnalyzer.cpp
src/domain/crossdomain/: CrossDomainValidator.cpp
src/domain/errors/: DefaultErrorHandlers.cpp  DefaultErrorHandlers.cpp.new  ErrorHandler.cpp  ErrorLogger.cpp  RecoveryStrategy.cpp
src/domain/events/: EventBus.cpp  EventStore.cpp  EventStore.cpp.tmp  GuiStateEvent.cpp  GuiStateHandler.cpp  NoteAddedEvent.cpp  NoteEventHandler.cpp  Snapshot.cpp
src/domain/exercises/: Exercise.cpp
src/domain/monitoring/: PerformanceMonitor.cpp
src/domain/music/: Duration.cpp  Interval.cpp  MelodicTemplate.cpp  Note.cpp  Pitch.cpp  Score.cpp  Voice.cpp
src/domain/plugins/: PluginManager.cpp
src/domain/progression/: ProgressionSystem.cpp
src/domain/rules/: ConsonantIntervalRule.cpp  DissonancePreparationRule.cpp  MelodicIntervalRule.cpp  ParallelFifthsConstructors.cpp  ParallelFifthsRule.cpp  ParallelFifthsRule_constructors.cpp  ParallelFifthsRule_impl.cpp  ParallelMotionRule.cpp  ParallelOctavesRule.cpp  RuleFactory.cpp  RuleSettings.cpp  ValidationPipeline.cpp  ValidationPipeline.cpp.bak  VoiceLeadingRule.cpp
src/domain/state/: SettingsState.cpp
src/domain/statesync/: StateSynchronizationManager.cpp
src/io/: PresetLoader.cpp  PresetLoader.h  ScoreLoader.cpp  ScoreLoader.h
src/midi/: MidiSystem.h  RtMidiSystem.cpp  RtMidiSystem.h
src/presentation/: ExerciseBrowser.cpp  ExercisePanel.cpp  FeedbackArea.cpp  GridCell.cpp  GuiStateCoordinator.cpp  MainWindow.cpp  NoteGrid.cpp  ScoreView.cpp  SettingsDialog.cpp  TransportControls.cpp  ViewportManager.cpp  VoiceChart.cpp  main_gui.cpp  test_gui.cpp
src/presentation/grid/: AdaptiveGridExpansionManager.cpp  BatchedGridRenderer.cpp  CoordinateTransformer.cpp  DefaultGridModel.cpp  GridManager.cpp  GridMemoryManager.cpp  NoteGridAdapter.cpp  QtBatchedGridRenderer.cpp  QtBatchedGridRenderer.h  ScoreViewAdapter.cpp  SpatialIndex.cpp  ViewportLayoutManager.cpp  ViewportManagerAdapter.cpp
src/presentation/viewmodels/: ScoreViewModel.cpp
src/rules/: ConcreteRuleEngine.cpp  ConcreteRuleEngine.h  ParallelFifthsRule.cpp  ParallelFifthsRule.h  ParallelOctavesRule.cpp  ParallelOctavesRule.h  Preset.h  RuleEngine.h  RuleTypes.h
src/ui/: MainWindow.cpp  MainWindow.h  ScoreViewportWidget.cpp  ScoreViewportWidget.h
src/utils/: DebugUtils.cpp  LockTracker.cpp
tests/: CMakeLists.txt  ErrorHandlingTests.cpp  ExerciseGenerationTests.cpp  LockingTests.cpp  MidiSystemTests.cpp  MusicTheoryTests.cpp  PerformanceMonitoringTests.cpp  ProgressionSystemTests.cpp  RepositoryTests.cpp  TestSuite.cpp  ValidationPipelineTests.cpp  main.cpp
tests/crossdomain/: CrossDomainValidatorTests.cpp
tests/domain/: KeySignature_test.cpp  Note_test.cpp  Pitch_test.cpp  Position_test.cpp  Score_test.cpp  TimeSignature_test.cpp
tests/grid/: GridAdapterTests.cpp  GridPerformanceBenchmark.cpp  GridSystemTests.cpp
tests/integration/: ExerciseGenerationIntegrationTests.cpp  PluginSystemIntegrationTests.cpp  StateSynchronizationTests.cpp  SystemIntegrationTests.cpp
tests/plugins/: PluginSystemTests.cpp  TestPlugin.cpp  TestPlugin.h
tests/rules/: ParallelFifthsRule_test.cpp  ParallelOctavesRule_test.cpp
tests/statesync/: StateSynchronizationManagerTests.cpp
(+233 files in other folders)
